Bug 355089 - Using numpad key "+" to navigate to next unread article no longer works
Summary: Using numpad key "+" to navigate to next unread article no longer works
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-09 15:55 UTC by Luis Silva
Modified: 2015-11-09 20:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Silva 2015-11-09 15:55:19 UTC
Since upgrading to Version 5.0.x, using numpad key "+" to navigate to next unread  article no longer works. A similar bug seems to have been present in kmail for a while but was quickly corrected (commit 74d26352b9c2c6c3bb75044a3fd8addca3977f16). 

I am using:
KDE Frameworks 5.15.0;
Qt 5.4.2 (built against 5.4.2);
The xcb windowing system.

Reproducible: Always
Comment 1 Laurent Montel 2015-11-09 20:38:39 UTC
Git commit afee265b099ec553fef883d5ddf799c973cde3a5 by Montel Laurent.
Committed on 09/11/2015 at 20:12.
Pushed by mlaurent into branch 'master'.

Fix Bug 355089 - Using numpad key "+" to navigate to next unread article no longer work

FIXED-IN: 5.1

M  +3    -2    akregator/src/actionmanagerimpl.cpp

http://commits.kde.org/kdepim/afee265b099ec553fef883d5ddf799c973cde3a5