Fix Bug 355089 - Using numpad key "+" to navigate to next unread article no longer work

FIXED-IN: 5.1

BUG: 355089